fix spacing issues for ranking table

--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ body {
   border-radius: 50%;
   width: 60px;
   height: 60px;
-  margin: 10px 20px 8px 20px;
+  margin: 10px 24px 8px 24px;
   display: inline-block;
   box-sizing: border-box;
   position: relative;
